# labynkyr

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  INSTALL.md  LICENSE.txt  README.md
examples/: Examples.cpp  RankExamples.hpp  SampleDistinguishingTables.hpp  SampleWeightTables.hpp  SearchExamples.hpp  SimulatedHWCPA.hpp  SimulationExamples.hpp
matlab/: examples.m  get_scores_1.m  get_scores_2.m  get_scores_3.m
matlab/rank/: pom.xml
matlab/rank/src/main/java/uk/ac/bristol/labynkyr/: BitWindow.java  DistinguishingTable.java  GraphCoordinate.java  Key.java  PathCountGraph.java  PathCountRank.java  Rank.java  WeightTable.java
matlab/rank/src/test/java/uk/ac/bristol/labynkyr/: TestBitWindow.java  TestDistinguishingTable.java  TestGraphCoordinate.java  TestKey.java  TestPathCountGraph.java  TestPathCountRank.java  TestWeightTable.java
src/labynkyr/: BigInt.hpp  BigReal.hpp  BitWindow.hpp  DistinguishingTable.hpp  DistinguishingTableBuilder.hpp  Key.hpp  VectorTransformations.hpp  WeightTable.hpp
src/labynkyr/rank/: ApproximateRank.hpp  GraphCoordinate.hpp  PathCountGraph.hpp  PathCountRank.hpp
src/labynkyr/search/: EffortAllocation.hpp  PathCountSearch.hpp  SearchSpec.hpp  SearchTask.hpp  SearchTaskGenerator.hpp
src/labynkyr/search/enumerate/: ActiveNodeFinder.hpp  CandidateKeyForest.hpp  CandidateKeyTree.hpp  PathCountEnumerationGraph.hpp  SortedEnumeration.hpp  WeightFinder.hpp
src/labynkyr/search/parallel/: ANFForestSearchTaskRunner.hpp  EnvironmentManager.hpp  PEU.hpp  PEUPool.hpp  Queue.hpp  SearchTaskRunner.hpp  SortedSearchTaskRunner.hpp  WorkScheduler.hpp
src/labynkyr/search/verify/: AES128NIEncryptUnrolledKeyVerifier.hpp  ComparisonKeyVerifier.hpp  FullKeyBuilder.hpp  KeyVerifier.hpp  ListKeyVerifier.hpp  ThreadSafeKeyVerifier.hpp
test/: BigIntTests.cpp  BigRealTests.cpp  BitWindowTests.cpp  DistinguishingTableBuilderTests.cpp  DistinguishingTableTests.cpp  KeyTests.cpp  Tester.cpp  VectorTransformationsTests.cpp  WeightTableTests.cpp
test/rank/: ApproximateRankTests.cpp  GraphCoordinateTests.cpp  PathCountGraphTests.cpp  PathCountRankTests.cpp
test/search/: EffortAllocationTests.cpp  PathCountSearchTests.cpp  SearchSpecTests.cpp  SearchTaskGeneratorTests.cpp
test/search/enumerate/: ActiveNodeFinderTests.cpp  CandidateKeyForestTests.cpp  WeightFinderTests.cpp
test/search/parallel/: ANFForestSearchTaskRunnerTests.cpp  ExceptionThrowingSearchTaskRunner.hpp  PEUPoolTests.cpp  PEUTests.cpp  QueueTests.cpp  SortedSearchTaskRunnerTests.cpp  WorkSchedulerTests.cpp
test/search/verify/: AES128NIEncryptUnrolledKeyVerifierTests.cpp  ComparisonKeyVerifierTests.cpp  ThreadSafeKeyVerifierTests.cpp
